added dapple to fish list on index.html; added javascript for dapple's dialog box on dialog.js

--- a/index.html
+++ b/index.html
@@ -95,6 +95,24 @@
                     <button class="button--close" id="close-dory">Close Dialog</button>
                 </dialog>
             </section>
+            <section class="fish">
+                <div>
+                    <img class="fish__image"
+                        src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/48/Reef1075_-_Flickr_-_NOAA_Photo_Library.jpg/1024px-Reef1075_-_Flickr_-_NOAA_Photo_Library.jpg" />
+                </div>
+                <div class="fish__name">Dapple</div>
+                <div>
+                    <button id="button--dapple">Details</button>
+                </div>
+                <dialog class="dialog--fish" id="details--dapple">
+                    <div>Species: Donkey Dung Sea Cucumber</div>
+                    <div>Location: Caribbean Sea</div>
+                    <div>Length: 20 in</div>
+                    <div>Food: Sediment, Detritus</div>
+
+                    <button class="button--close" id="close-dapple">Close Dialog</button>
+                </dialog>
+            </section>
         </article>
         <aside class="tipList bordered">
             <header>
