--- a/index.html
+++ b/index.html
@@ -95,6 +95,22 @@
                     <button class="button--close" id="close-dory">Close Dialog</button>
                 </dialog>
             </section>
+            <section>
+                <div>
+                    <img class="fish__image"
+                    src="https://www.sailorsforthesea.org/sites/default/files/styles/large/public/Fotolia_52829309_Subscription_Monthly_L.jpg?itok=NJmco9HS"/>
+                </div>
+                <div class="fish__name">Simba</div>
+                <div>
+                    <button id="button--simba">Details</button>
+                </div>
+                <dialog class="dialog--fish" id="details--simba">
+                    <div>Species: Lionfish</div>
+                    <div>Location: Indian Ocean</div>
+                    <div>Length: 8 inches</div>
+                    <div>Food: Hyenas</div>
+                </dialog>
+            </section>    
         </article>
         <aside class="tipList bordered">
             <header>
