Fixed Simba's dialog close button

--- a/index.html
+++ b/index.html
@@ -109,8 +109,10 @@
                     <div>Location: Indian Ocean</div>
                     <div>Length: 8 inches</div>
                     <div>Food: Hyenas</div>
+
+                    <button class="button--close" id="close-dory">Close Dialog</button>
                 </dialog>
-            </section>    
+            </section> 
         </article>
         <aside class="tipList bordered">
             <header>
